force-app/main/default/objects/Claim_Acknowledgment__c/Claim_Acknowledgment__c.object-meta.xml
<CustomObject>
    <description
  >Inbound 277CA claim acknowledgment. Records are private because status details and the raw report can contain PHI.</description>
    <label>Claim Acknowledgment</label>
    <nameField>
        <displayFormat>CLMACK-{00000000}</displayFormat>
        <label>Claim Acknowledgment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Acknowledgments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>