force-app/main/default/objects/Claim_Acknowledgment__c/fields/Acknowledgment_Key__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Key__c</fullName>
    <description
  >Deterministic idempotency key for one claim result within a Stedi 277CA transaction.</description>
    <externalId>true</externalId>
    <label>Acknowledgment Key</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>