force-app/main/default/objects/Claim_Acknowledgment__c/fields/Claim_Submission__c.field-meta.xml
<CustomField>
    <fullName>Claim_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Submission</label>
    <referenceTo>Claim_Submission__c</referenceTo>
    <relationshipLabel>Claim Acknowledgments</relationshipLabel>
    <relationshipName>Claim_Acknowledgments</relationshipName>
    <type>Lookup</type>
</CustomField>