force-app/main/default/objects/Claim_Acknowledgment__c/fields/Claim_Transaction_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Transaction_Batch_Number__c</fullName>
    <description
  >277CA batch tracking number that can correlate to the Stedi submission correlation identifier.</description>
    <label>Claim Transaction Batch Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>