force-app/main/default/objects/Claim_Acknowledgment__c/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <label>Match Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Matched</fullName><default>true</default><label
        >Matched</label></value>
            <value><fullName>Unmatched</fullName><default>false</default><label
        >Unmatched</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>