force-app/main/default/objects/Claim_Acknowledgment__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description
  >Human-readable claim and service-line acknowledgment details.</description>
    <label>Acknowledgment Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>