force-app/main/default/objects/Claim_Acknowledgment__c/fields/Patient_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Control_Number__c</fullName>
    <description
  >Patient control number returned in the 277CA and used to correlate the original 837 claim.</description>
    <label>Patient Control Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>