force-app/main/default/objects/Claim_Acknowledgment__c/fields/Payer_Claim_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_Claim_Control_Number__c</fullName>
    <description
  >Claim identifier assigned by the payer after the claim enters payer processing.</description>
    <label>Payer Claim Control Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>