force-app/main/default/objects/Claim_Acknowledgment__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <description
  >Raw Stedi 277CA JSON report. May contain PHI and is restricted to claim-management users.</description>
    <label>Raw Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>