force-app/main/default/objects/Claim_Acknowledgment__c/fields/Sender_Type__c.field-meta.xml
<CustomField>
    <fullName>Sender_Type__c</fullName>
    <label>Sender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Clearinghouse</fullName><default
        >false</default><label>Clearinghouse</label></value>
            <value><fullName>Payer</fullName><default>false</default><label
        >Payer</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label
        >Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>