force-app/main/default/objects/Claim_Acknowledgment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Acknowledgment Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Received</fullName><default>false</default><label
        >Received</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label
        >Accepted</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label
        >Rejected</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label
        >Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>