force-app/main/default/objects/Claim_Acknowledgment__c/fields/Status_Codes__c.field-meta.xml
<CustomField>
    <fullName>Status_Codes__c</fullName>
    <description
  >Normalized 277CA category, status, entity, and action codes.</description>
    <label>Status Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>