force-app/main/default/objects/Claim_Acknowledgment__c/fields/Superbill__c.field-meta.xml
<CustomField>
    <fullName>Superbill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superbill</label>
    <referenceTo>Superbill__c</referenceTo>
    <relationshipLabel>Claim Acknowledgments</relationshipLabel>
    <relationshipName>Claim_Acknowledgments</relationshipName>
    <type>Lookup</type>
</CustomField>