force-app/main/default/objects/Claim_Acknowledgment__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description
  >Stedi transaction identifier used to retrieve the 277CA report.</description>
    <label>Transaction Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>