force-app/main/default/objects/Claim_Acknowledgment__c/listViews/Recent_Acknowledgments.listView-meta.xml
<ListView>
    <fullName>Recent_Acknowledgments</fullName>
    <columns>NAME</columns>
    <columns>Claim_Submission__c</columns>
    <columns>Status__c</columns>
    <columns>Sender_Type__c</columns>
    <columns>Sender_Name__c</columns>
    <columns>Patient_Control_Number__c</columns>
    <columns>Match_Status__c</columns>
    <columns>Processed_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Acknowledgments</label>
</ListView>